# AI_Coach

./: .env.example  .gitignore  FIX_EMBEDDING_STORAGE.md  README.md  SETUP_GUIDE.md  UI_GUIDE.md  pyproject.toml
PRPs/requests/: youtube-ai-coach-agent.md  youtube-rag-pipeline.md
frontend/: index.html
frontend/static/css/: styles.css
frontend/static/js/: app.js
migrations/: 001_youtube_rag_schema.sql  002_agent_tables.sql  fix_embedding_column.sql
scripts/: check_column_type.sql  clear_and_reprocess.py  fix_embedding_storage.py
src/: __init__.py  main.py
src/agent/: __init__.py  agent.py  config.py  deps.py
src/api/: __init__.py  db_utils.py  main.py
src/rag_pipeline/: __init__.py  chunking_service.py  cli.py  config.py  embedding_service.py  pipeline.py  schemas.py  storage_service.py  youtube_service.py
src/tools/: __init__.py
src/tools/rag_tools/: __init__.py  service.py  tool.py
src/utils/: __init__.py  clients.py  logging.py
tests/agent/: test_config.py
tests/api/: test_main.py
tests/rag_pipeline/: __init__.py  test_chunking_service.py  test_config.py  test_embedding_service.py  test_pipeline.py  test_storage_service.py
tests/tools/rag_tools/: __init__.py  test_service.py
